# agent-based-decision-pipeline

./: .coveragerc  .gitignore  .ruff.toml  AGENTS.md  CONTRIBUTING.md  README.md  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
docs/: README.md  architecture.md  cli.md  evaluation.md  evidence-reporting.md  inspector.md  naming.md  plugin-system.md  prd.md  quickstart.md  repository-structure.md  review.md  roadmap.md  vision.md
docs/adr/: 0000-template.md  0001-two-plane-execution-model.md  README.md
docs/development/: README.md  mutmut.md
docs/examples/: README.md  first-domain-example.md
docs/models/: README.md  agent-model.md  domain-model.md  scenario-model.md
examples/: __init__.py
examples/credit_underwriting/: __init__.py  __main__.py  agents.py  audit.py  domain.py  resolver.py  scenario.py
examples/queue_scheduling/: __init__.py  __main__.py  agents.py  audit.py  domain.py  resolver.py
src/abdp/: __init__.py  __main__.py  version.py
tests/agents/: test_agent_context.py  test_agent_decision.py  test_agent_protocol.py  test_agents_public_surface.py
tests/cli/: _fixtures.py  test_cli_public_surface.py  test_help.py  test_inspect.py  test_loader.py  test_report.py  test_report_validators.py  test_run.py
tests/core/: test_connectors.py  test_core_public_surface.py  test_hashing.py  test_ids.py  test_manifest_factory.py  test_rate_limit.py  test_retry.py  test_types.py
tests/data/: test_bronze.py  test_gold.py  test_public_surface.py  test_silver.py  test_snapshot_manifest.py  test_storage.py
tests/docs/: test_quickstart_examples.py  test_roadmap_v03_section.py
tests/evaluation/: test_evaluate_metrics.py  test_evaluation_public_surface.py  test_gate.py  test_metric.py  test_summary.py
tests/evidence/: test_audit_log.py  test_claim_record.py  test_evidence_public_surface.py  (+3 more)
(+128 files in other folders)
