[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "abdp"
version = "0.1.0.dev0"
description = "A Python framework for reproducible agent-based decision simulation"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = []
