[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "abdp"
version = "0.1.0.dev0"
description = "A Python framework for reproducible agent-based decision simulation"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = []

[project.optional-dependencies]
dev = [
    "build>=1.0.0",
    "hypothesis>=6.0.0",
    "mutmut>=3.0.0",
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
]

[tool.mutmut]
paths_to_mutate = ["src/abdp/"]
pytest_add_cli_args = ["-p", "no:cacheprovider", "--no-cov"]
pytest_add_cli_args_test_selection = ["tests/unit/", "tests/core/", "tests/data/"]
also_copy = ["pytest.ini"]
do_not_mutate = [
    "src/abdp/__init__.py",
    "src/abdp/core/__init__.py",
    "src/abdp/data/__init__.py",
    "src/abdp/simulation/__init__.py",
]
